<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/summaryPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:text="@string/resultprompt"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imagePrompt"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/summaryPrompt"
        app:layout_constraintStart_toStartOf="@+id/summaryPrompt"
        app:layout_constraintTop_toBottomOf="@+id/summaryPrompt"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imagePrompt"
        app:layout_constraintStart_toStartOf="@+id/imagePrompt"
        app:layout_constraintTop_toBottomOf="@+id/imagePrompt" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/play_again"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score" />

</androidx.constraintlayout.widget.ConstraintLayout>