<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_8sdp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:background="@drawable/background_icon"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/leaderBoardPosition"
        app:layout_constraintStart_toEndOf="@+id/leaderBoardPosition"
        app:layout_constraintTop_toTopOf="@+id/leaderBoardPosition"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/leaderBoardPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
        app:layout_constraintStart_toEndOf="@+id/imageProfile"
        app:layout_constraintTop_toTopOf="@+id/imageProfile" />

    <TextView
        android:id="@+id/score"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/userName"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="@+id/userName" />

</androidx.constraintlayout.widget.ConstraintLayout>