<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity">


    <TextView
        android:id="@+id/numberOfQuestion"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/current_q"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/question"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/background_question"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfQuestion" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/background_answer"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_answer"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/answer1" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/background_answer"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/answer1"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/answer"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@drawable/background_answer"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/answer2"
        app:layout_constraintTop_toTopOf="@+id/answer3" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/next"
        android:visibility="invisible"
        android:onClick="onNextButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>